--- a/Desktop/Discord PROJET/package.json
+++ b/Desktop/Discord PROJET/package.json
@@ -8,5 +8,22 @@
   "license": "MIT",
   "dependencies": {
     "discord.js": "discordjs/discord.js"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-aqua": "^7.2.1"
+  },
+  "esLintConfig": {
+    "extends": "aqua/node",
+    "rules": {
+      "linebreak-style": [
+        "error",
+        "windows"
+      ],
+      "quotes": [
+        "warn",
+        "double"
+      ]
+    }
   }
 }
